# $Id$

2008-12-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/AggregateCache.class.php: restore true randomness upon
	exit from guessLabel().

2008-12-18	Vladlen Y. Koshelev	<vlad.kosh@gmail.com>

	* core/Form/RegulatedForm.class.php: ruleExists() added.

2008-09-02	Vladlen Y. Koshelev	<vlad.kosh@gmail.com>

	* core/Form/PrimitiveEnumeration.class.php: getList() fixed.

2008-08-30	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/Memcached.class.php: mark peer as dead on link's failure.

2008-05-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/PrimitiveString.class.php: '0' is a valid string too.

2008-03-31	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* test/core/PrimitiveDateTest.class.php: synced with reality.

	* core/Base/Time.class.php: several fixes for parsing issues were
	backported from trunk.

2008-02-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
	onPHP's version now appends to watermark.

2007-09-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/: uncaching fixed in dropByIds().

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-06-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.19 released.

2007-04-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-03-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/UnifiedContainer.class.php: fetched collection now
	excluded from serialization.

2007-01-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/UnifiedContainer.class.php: unsaved objects are not
	tracked by importList() now.

2007-01-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>
